--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@abhijeet42cy6/vector-lines": "^1.0.0",
+    "@gsap/react": "^2.1.2",
     "framer-motion": "^12.23.12",
     "gsap": "^3.13.0",
     "react": "^18.2.0",
@@ -20,12 +21,12 @@
   "devDependencies": {
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
-    "@vitejs/plugin-react": "^4.2.1",
+    "@vitejs/plugin-react": "^4.0.0",
     "eslint": "^8.55.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "vite": "^7.0.6"
+    "vite": "^4.5.0"
   },
   "keywords": [
     "react",
