--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@abhijeet42cy6/vector-lines": "^1.0.0",
     "@gsap/react": "^2.1.2",
+    "@studio-freight/lenis": "^1.0.42",
     "framer-motion": "^12.23.12",
     "gsap": "^3.13.0",
     "react": "^18.2.0",
